未add文件添加

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>获取用户身份证信息</title>
 </head>
 <body>
-$END$
+<form action="/idCard">
+    <label for="idCard">身份证号：</label>
+    <input type="text" id="idCard" value="" name="cardno">
+    <input type="submit" value="提交按钮">
+</form>
 </body>
 </html>
